--- a/package.json
+++ b/package.json
@@ -8,23 +8,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "classnames": "^2.3.1",
-    "next": "12.2.5",
+    "classnames": "^2.3.2",
+    "graphql-request": "^5.0.0",
+    "next": "12.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^18.7.14",
-    "@types/react": "^18.0.18",
+    "@types/node": "^18.8.5",
+    "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "autoprefixer": "^10.4.8",
-    "eslint": "^8.23.0",
-    "eslint-config-next": "^12.2.5",
+    "autoprefixer": "^10.4.12",
+    "eslint": "^8.25.0",
+    "eslint-config-next": "^12.3.1",
     "eslint-config-prettier": "^8.5.0",
-    "postcss": "^8.4.16",
+    "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.8",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.4"
   }
 }
