--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
     "classnames": "^2.3.2",
+    "framer-motion": "^7.5.3",
     "graphql-request": "^5.0.0",
     "next": "12.3.1",
     "phosphor-react": "^1.4.1",
